# bonicbot-a2-ros

./: CMakeLists.txt  README.md  my_bot.xml  package.xml
config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
description/: body.xacro  camera.xacro  gazebo_control.xacro  gripper.xacro  head.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hardware/: diffbot_system.cpp
hardware/include/my_bot/: diffbot_system.hpp  uart_protocol.hpp
launch/: camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  nav2_combined.launch.py  robot_system.launch.py  rplidar.launch.py  rsp.launch.py
scripts/: robot_manager.py
